# django_newscite

./: .gitignore  README.md  pyproject.toml
newscite/: manage.py
newscite/news/: forms.py  models.py  urls.py  views.py
newscite/news/migrations/: 0001_initial.py  0002_alter_comment_options.py
newscite/news/static/css/: styles.css
newscite/news/templates/: add_news.html  all_news.html  edit_news.html  home.html  login.html  profile.html  register.html  single_news.html
newscite/news/templates/base/: base.html
newscite/newscite/: asgi.py  settings.py  urls.py  wsgi.py
