[project]
name = "logstream-final"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Mizerael", email = "dan-acer@outlook.com" }
]
dependencies = [
    "pytest>=8.3.4",
    "django>=5.1.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.8.1",
    "pre-commit>=4.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["newscite/newscite"]

[tool.poetry]
name = "logstream-final"
version = "0.1.0"
description = "A your description here"
authors = ["Mizerael <dan-acer@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.4"
django = "^5.1.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.8.1"

[tool.ruff]
line-length = 88
